# xf86-video-openfimg

./: configure.ac
conf/: 42-openfimg.conf  Makefile.am
man/: .gitignore  openfimg.man
src/: Makefile.am  drmmode_display.c  of-accel.c  of-dri2.c  of-driver.c  of-exa-xa.c  of-pixmap.c  of.h
